# autoware.universe

./: .pre-commit-config.yaml  .pre-commit-lint-system-design.sh  codecov.yaml  versions.json
.github/: CODEOWNERS
.github/actions/lint-system-design-format/: README.md  action.yaml
.github/workflows/: lint-autoware-system-design-format.yml
latest/: 404.html  index.html  sitemap.xml
latest/CODE_OF_CONDUCT/: index.html
latest/CONTRIBUTING/: index.html
latest/DISCLAIMER/: index.html
latest/common/: index.html
latest/common/autoware_ad_api_specs/: index.html
latest/common/autoware_adapi_specs/: index.html
latest/common/autoware_agnocast_wrapper/: index.html
latest/common/autoware_component_interface_specs/: index.html
latest/common/autoware_component_interface_specs_universe/: index.html
latest/common/autoware_component_interface_tools/: index.html
latest/common/autoware_component_interface_utils/: index.html
latest/common/autoware_cuda_dependency_meta/: index.html
latest/common/autoware_glog_component/: index.html
latest/common/autoware_grid_map_utils/: index.html
latest/common/autoware_interpolation/: index.html
latest/common/autoware_kalman_filter/: index.html
latest/common/cuda_utils/: index.html
latest/planning/: index.html
latest/search/: search_index.json
launch/tier4_perception_launch/: package.xml
main/: 404.html  index.html  sitemap.xml
main/CODE_OF_CONDUCT/: index.html
main/CONTRIBUTING/: index.html
main/DISCLAIMER/: index.html
main/common/: index.html
main/planning/: index.html
main/search/: search_index.json
perception/architecture/autoware_perception_architect/: CMakeLists.txt  autoware_architect-extras.cmake  package.xml
perception/architecture/autoware_perception_architect/cmake/: autoware_architect_add_module.cmake  autoware_architect_add_parameter.cmake  autoware_architect_build_deploy.cmake
perception/architecture/autoware_perception_architect/script/: build.py  classes.py  generate_launcher.py  instance.py  logic_diagram.puml.jinja2  node-diagram.puml.jinja2  node_diagram.puml.jinja2
perception/architecture/autoware_perception_dummy_modules_a/: CMakeLists.txt  package.xml
perception/architecture/autoware_perception_dummy_modules_a/architecture/: DetectorA.module.yaml  FilterA.module.yaml  SensorA.module.yaml
perception/architecture/autoware_perception_dummy_modules_a/launcher/: detector_a_use_container.launch.xml  detector_a_use_container_false.launch.xml
perception/autoware_map_based_prediction/: CMakeLists.txt
perception/autoware_multi_object_tracker/: CMakeLists.txt  package.xml
perception/autoware_object_sorter/: README.md  package.xml
perception/autoware_radar_object_tracker/: CMakeLists.txt
perception/autoware_roi_based_detector/: README.md  package.xml
perception/autoware_simpl/: CMakeLists.txt  README.md  package.xml
perception/autoware_simpl/config/: simpl.param.yaml
perception/autoware_simpl/include/autoware/simpl/: simpl_ego_node.hpp  simpl_node.hpp  trt_simpl.hpp
perception/autoware_simpl/include/autoware/simpl/archetype/: agent.hpp  datatype.hpp  exception.hpp  fixed_queue.hpp  map.hpp  polyline.hpp  prediction.hpp  result.hpp  tensor.hpp
perception/autoware_simpl/include/autoware/simpl/conversion/: lanelet.hpp  predicted_object.hpp  tracked_object.hpp
perception/autoware_simpl/include/autoware/simpl/debug/: marker.hpp
perception/autoware_simpl/include/autoware/simpl/processing/: geometry.hpp  polyline.hpp  postprocessor.hpp  preprocessor.hpp  rpe.hpp
perception/autoware_simpl/launch/: simpl.launch.xml  simpl_ego.launch.xml
perception/autoware_simpl/schema/: simpl.schema.json
perception/autoware_simpl/src/: simpl_ego_node.cpp  simpl_node.cpp  trt_simpl.cpp
perception/autoware_simpl/src/archetype/: agent.cpp  polyline.cpp
perception/autoware_simpl/src/conversion/: lanelet.cpp  tracked_object.cpp
perception/autoware_simpl/src/debug/: marker.cpp
perception/autoware_simpl/src/processing/: postprocessor.cpp  preprocessor.cpp
perception/autoware_simpl/test/: test_agent.cpp  test_exception.cpp  test_fixed_queue.cpp  test_lanelet_conversion.cpp  test_map.cpp  test_polyline.cpp  test_postprocessor.cpp  test_preprocessor.cpp  test_result.cpp  test_tensor.cpp  test_tracked_object_conversion.cpp
perception/autoware_simpl/test/archetype/: test_agent.cpp  test_fixed_queue.cpp  test_map.cpp  test_prediction.cpp
perception/autoware_simpl/test/conversion/: test_predicted_object.cpp  test_tracked_object.cpp
perception/autoware_simpl/test/processing/: test_geometry.cpp  test_polyline.cpp  test_postprocessor.cpp  test_preprocessor.cpp  test_rpe.cpp
perception/ground_segmentation/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/multi_object_tracker/: README.md
perception/object_uncertainty_modeler/: CMakeLists.txt  README.md  package.xml
perception/object_uncertainty_modeler/include/object_uncertainty_modeler/: object_uncertainty_modeler_radar_node.hpp
perception/object_uncertainty_modeler/launch/: object_uncertainty_modeler_radar.launch.xml
perception/object_uncertainty_modeler/src/object_uncertainty_modeler_node/: object_uncertainty_modeler_radar_node.cpp
perception/roi_based_detector/: CMakeLists.txt  README.md  package.xml
perception/roi_based_detector/config/: roi_based_detector.param.yaml
perception/roi_based_detector/include/roi_based_detector/: roi_based_detector_node.hpp
perception/roi_based_detector/launch/: roi_based_detector.launch.xml
perception/roi_based_detector/schema/: roi_based_detector.schema.json
perception/roi_based_detector/src/: roi_based_detector_node.cpp
perception/vision_roi_object_detector/: CMakeLists.txt  README.md  package.xml
perception/vision_roi_object_detector/include/vision_roi_object_detector/: node.hpp
perception/vision_roi_object_detector/launch/: vision_roi_object_detector.launch.xml
perception/vision_roi_object_detector/src/vision_roi_object_detector/: node.cpp
planning/motion_velocity_smoother/: README.ja.md  README.md
sensing/vehicle_velocity_converter/: package.xml
(+1475 files in other folders)
