<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_uncertainty_modeler</name>
  <version>0.1.0</version>
  <description>object_uncertainty_modeler</description>
  <maintainer email="taekjin.lee@tier4.jp">Taekjin Lee</maintainer>
  <license>Apache License 2.0</license>
  <author email="taekjin.lee@tier4.jp">Taekjin Lee</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>radar_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tier4_autoware_utils</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
